--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
                   sustainability. With initiatives in renewable energy, digital
                   transformation, and robust infrastructure.
                 </p>
-                <div class="donate-money">
-                    
-
+                <div class="donate-money">        
+                    <div><button class="donate-amount">100 Taka</button></div>
+                    <div><button class="donate-amount-click">200 Taka</button></div>
+                    <div><button class="donate-amount">500 Taka</button></div>
+                    <div><button class="donate-amount">1000 Taka</button></div>
                 </div>
         </main>
         
