fixed margin issues

--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
                         <button class="btn-learn">Learn More</button>
                     </div>
                 </div>
-
-
-
+            </section>
+            <section class="quote">
+                <p class="section-description">Money begets money. If you don't have that, you wait around to be hired by somebody at the mercy of others. If you have that money in your hand, you desperately try to make the best use of it and move ahead. And that's generating income for yourself.Today, the concept of business is to make money. Making money is the name of the business.All human beings are born entrepreneurs. Some get a chance to unleash that capacity. Some never got the chance, never knew that he or she has that capacity.</p>
+                <h3 class="vision-title">Dr. Muhammad Yunus</h3>
+                <h4 class="section-description">Chief Adviser of the People's Republic of Bangladesh</h4>
             </section>
             <section class="Recent_news">
                 <h1 class="section-title">Recent News</h1>
@@ -115,12 +117,30 @@
                     <div><button class="donate-amount">500 Taka</button></div>
                     <div><button class="donate-amount">1000 Taka</button></div>
                 </div>
-        </main>
-        
+                <div class="donate-other"><input type="text" placeholder="Other Amount (Taka)" /></div>
+                <div><button class="btn-donate">Donate Now</button></div>
+            </section>
+        </main>    
     </body>
     <footer>
+        <div class="news-letter">
+            <h3 class="section-title">Subscribe Newsletter</h3>
+            <p class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth.</p>
+            <div class="mail-enter">
+                    <input type="text" placeholder="Enter your email here"/>
+                    <button>Subscribe</button>
+            </div>
+            <p class="section-description">We promise not to spam you!</p>
+            <h3 class="connect-title">Let's connect!</h3>
+            <div class="icons">
+                <a href=""><img src="assets/facebook.png" alt=""></a>
+                <a href=""><img src="assets/instagram.png" alt=""></a>
+                <a href=""><img src="assets/x.png" alt=""></a>
+            </div>
+        </div>
 
-    </footer>
-    
+
+    </footer>  
 </body>
 </html>
